tests/negative/neg_pr1113b_match_extra_binders.safe
package neg_pr1113b_match_extra_binders

   type shape is circle (radius : integer) or idle;

   function value returns integer

      current : shape = circle (1);
      match current
         when circle (left, right)
            return left + right
         when idle
            return 0
